🐛 Fix heading box overlapping previous content

--- a/src/Fydar.Dev.WebApp/Components/Decoration/Heading.razor.css
+++ b/src/Fydar.Dev.WebApp/Components/Decoration/Heading.razor.css
@@ -4,16 +4,6 @@
     width: 100%;
 }
 
-.heading-anchor:before {
-    content: '';
-    display: block;
-    position: relative;
-    width: 0;
-    height: 5em;
-    margin-top: -5em;
-    pointer-events: none;
-}
-
 .heading-anchor {
     position: relative;
 }
